Updated documentation for ML module and fixed the issues

--- a/source/references.bib
+++ b/source/references.bib
@@ -55,7 +55,7 @@
 
 @Article{Yesilli2019,
   author  = {Yesilli, Melih C. and Khasawneh, Firas A. and Otto, Andreas},
-  journal = {arXiv preprint arXiv:1905.08671},
+  journal = {arXiv preprint: 1905.08671},
   title   = {Topological feature vectors for chatter detection in turning processes},
   year    = {2019},
 }
@@ -91,6 +91,20 @@
   doi       = {10.17632/HVM4WH3JZX.1},
   keywords  = {Machine Learning, Turning, Machining, Time Series},
   publisher = {Mendeley Data http://dx.doi.org/10.17632/hvm4wh3jzx.1},
+}
+
+@Article{Perea2019,
+  author        = {Jose A. Perea and Elizabeth Munch and Firas A. Khasawneh},
+  journal       = {arXiv preprint: 1902.07190},
+  title         = {Approximating Continuous Functions on Persistence Diagrams Using Template Functions},
+  year          = {2019},
+  month         = feb,
+  abstract      = {The persistence diagram is an increasingly useful tool from Topological Data Analysis, but its use alongside typical machine learning techniques requires mathematical finesse. The most success to date has come from methods that map persistence diagrams into $\mathbb{R}^n$, in a way which maximizes the structure preserved. This process is commonly referred to as featurization. In this paper, we describe a mathematical framework for featurization using template functions. These functions are general as they are only required to be continuous and compactly supported. We discuss two realizations: tent functions, which emphasize the local contributions of points in a persistence diagram, and interpolating polynomials, which capture global pairwise interactions. We combine the resulting features with classification and regression algorithms on several examples including shape data and the Rossler system. Our results show that using template functions yields high accuracy rates that match and often exceed those of existing featurization methods. One counter-intuitive observation is that in most cases using interpolating polynomials, where each point contributes globally to the feature vector, yields significantly better results than using tent functions, where the contribution of each point is localized. Along the way, we provide a complete characterization of compactness in the space of persistence diagrams.},
+  archiveprefix = {arXiv},
+  eprint        = {1902.07190},
+  file          = {:http\://arxiv.org/pdf/1902.07190v2:PDF},
+  keywords      = {cs.CG, math.AT, math.ST, stat.ML, stat.TH},
+  primaryclass  = {cs.CG},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
